<resources>
    <string name="app_name">Home</string>
    <string name="Shopping">Shopping</string>
    <string name="phone">Phone</string>
    <string name="survey">SURVEY</string>
    <string name="user_name">User name</string>
    <string name="next">NEXT</string>
    <string name="password">password</string>
    <string name="route">Route</string>
    <string-array name="gender">
        <item>male</item>
        <item>female</item>
    </string-array>
    <string name="title_activity_courses_list">CoursesList</string>
</resources>
