<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/white"
    >
    <TextView
        android:id="@+id/route"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/route"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textSize="80sp"
        android:fontFamily="@font/route"
        />
    <TextView
        android:layout_below="@id/route"
        android:id="@+id/survey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey"
        android:textColor="@color/survey"
        android:textSize="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        />

    <EditText
        android:inputType="text"
        android:id="@+id/user_name"
        android:layout_below="@id/survey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:gravity="start"
        android:padding="20dp"
        android:drawableStart="@drawable/name"
        android:drawablePadding="8dp"/>
    />
    <EditText
        android:id="@+id/phone"
        android:layout_below="@id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:drawableStart="@drawable/phone"
        android:gravity="start"
        android:padding="20dp"
        android:inputType="number"
        android:drawablePadding="8dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_below="@id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:drawableStart="@drawable/password"
        android:gravity="start"
        android:padding="20dp"
        android:inputType="numberPassword"
        android:drawablePadding="8dp"/>
    <Spinner
        android:id="@+id/gender_spin"
        android:layout_below="@id/password"
        android:entries="@array/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown">
    </Spinner>
    <Button
        android:id="@+id/next_button"
        android:layout_below="@id/gender_spin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/next"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        />
</RelativeLayout>